# greylog-events-via-api

./: .env.example  README.md  app.py  pyproject.toml  run.sh
.github/workflows/: tests.yaml
tests/: test_app.py
