[project]
name = "greylog-ollama-enrichment"
version = "0.1.0"
description = "Fetch Greylog events, redact PII, enrich with Ollama, and send results back to Greylog."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "black>=25.0.0",
    "pytest>=8.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["greylog_recent_stream_events"]

[tool.uv]
package = false
